JTA - Se crea CRUD de Roles, Servicios y Repositoros

--- a/RocketProcess.Razor/Pages/Inicio.razor
+++ b/RocketProcess.Razor/Pages/Inicio.razor
@@ -10,6 +10,6 @@
 
     public void Navegar()
     {
-        nm.NavigateTo("swagger", true);
+        nm.NavigateTo("swagger/index.html", true);
     }
 }
