--- a/RocketProcess.Razor/Pages/Usuarios/UserEdit.razor
+++ b/RocketProcess.Razor/Pages/Usuarios/UserEdit.razor
@@ -10,7 +10,7 @@
 </style>
 @if (login is null || usuario is null)
 {
-    <div class="d-flex align-items-center align-text-center">
+    <div class="d-flex align-items-center text-center">
         <MudProgressCircular Color="Color.Info" Indeterminate="true" />
     </div>
 }
