--- a/RocketProcess.Razor/App.razor
+++ b/RocketProcess.Razor/App.razor
@@ -1,6 +1,4 @@
-﻿@using RocketProcess.Razor.Shared
-
-<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
