JTA - Se agregan endpoint

--- a/RocketProcess.Razor/Pages/Roles/RolEdit.razor
+++ b/RocketProcess.Razor/Pages/Roles/RolEdit.razor
@@ -48,7 +48,7 @@ else
     [Parameter]
     public Rol rol { get; set; }
 
-    private UsuarioDetalle usuarioDetalle { get; set; }
+    private ListUser _ListUser { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
