--- a/RocketProcess.Razor/_Imports.razor
+++ b/RocketProcess.Razor/_Imports.razor
@@ -11,3 +11,6 @@
 @using RocketProcess.Shared
 @using RocketProcess.Services.Servicios.Services
 @using RocketProcess.Services.Servicios.Interfaces
+@using RocketProcess.Shared.Entidades
+@using RocketProcess.Shared.Modelos
+@using RocketProcess.Shared.Utilidades
