--- a/RocketProcess.Razor/Pages/Tareas/Tareas.razor
+++ b/RocketProcess.Razor/Pages/Tareas/Tareas.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Tareas"
+@attribute [Authorize(Roles = "Administrator, User")]
 
 @*<RocketProcess.Razor.Pages.Estandar.Grilla>
     <Encabezado></Encabezado>
