--- a/RocketProcess.Razor/_Imports.razor
+++ b/RocketProcess.Razor/_Imports.razor
@@ -14,6 +14,9 @@
 @using RocketProcess.Shared.Entidades
 @using RocketProcess.Shared.Modelos
 @using RocketProcess.Shared.Utilidades
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 
 @*Vistas*@
 @using RocketProcess.Razor.Pages.Estandar
+@using RocketProcess.Razor.Authentication
