--- a/RocketProcess/Client/_Imports.razor
+++ b/RocketProcess/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using RocketProcess.Shared
 @using RocketProcess.Services.Servicios.Services
 @using RocketProcess.Services.Servicios.Interfaces
+@using RocketProcess.Razor.Authentication
