JTA - More codding

--- a/RocketProcess.Razor/Pages/Index.razor
+++ b/RocketProcess.Razor/Pages/Index.razor
@@ -7,7 +7,7 @@
         <Inicio></Inicio>
     </Authorized>
     <NotAuthorized>
-        <h1>Hola, Invitado!</h1>
+        <_Login></_Login>
     </NotAuthorized>
 </AuthorizeView>
 
