--- a/RocketProcess.Razor/_Imports.razor
+++ b/RocketProcess.Razor/_Imports.razor
@@ -20,3 +20,4 @@
 @*Vistas*@
 @using RocketProcess.Razor.Pages.Estandar
 @using RocketProcess.Razor.Authentication
+@using RocketProcess.Razor.Pages.Login
