--- a/RocketProcess.Razor/Pages/Login/_Login.razor
+++ b/RocketProcess.Razor/Pages/Login/_Login.razor
@@ -13,15 +13,15 @@
             <h3>LOGIN</h3>
         </div>
         <div class="mb-3">
-            <label>User Name</label>
-            <input @bind="loginRequest.UserName" class="form-control" />
+            <label>Correo</label>
+            <input @bind="loginRequest.Correo" class="form-control" />
         </div>
         <div class="mb-3">
             <label>Password</label>
             <input @bind="loginRequest.Password" type="password" class="form-control" placeholder="Password" />
         </div>
         <div class="mb-3 d-grid gap-2">
-            <button @onclick="Authenticate" class="btn btn-primary">Login</button>
+            <button @onclick="Authenticate" class="btn btn-primary">Ingresar</button>
         </div>
     </div>
 </div>
