--- a/RocketProcess.Razor/Pages/Login/_Login.razor
+++ b/RocketProcess.Razor/Pages/Login/_Login.razor
@@ -1,7 +1,5 @@
 ﻿@page "/login"
 @using System.Net
-
-
 @inject HttpClient httpclient
 @inject IJSRuntime js
 @inject AuthenticationStateProvider authStateProvider
@@ -10,7 +8,7 @@
 <div class="row">
     <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
         <div class="mb-3 text-center">
-            <h3>LOGIN</h3>
+            <h3>INICIAR SESIÓN</h3>
         </div>
         <div class="mb-3">
             <label>Correo</label>
