--- a/RocketProcess.Razor/_Imports.razor
+++ b/RocketProcess.Razor/_Imports.razor
@@ -14,8 +14,11 @@
 @using RocketProcess.Shared.Entidades
 @using RocketProcess.Shared.Modelos
 @using RocketProcess.Shared.Utilidades
+@using RocketProcess.Shared.Seguridad
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+
+@inject NavigationManager NM
 
 @*Vistas*@
 @using RocketProcess.Razor.Pages.Estandar
